<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.18">
  <DUT Name="T_Ctrl_SIf_CYL_In" Id="{9ea28e60-0403-41b8-b339-224ad2c9da53}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_CYL_In :
STRUCT
	///sensor feedback position extended reached
	bolExtended: T_Ctrl_IoBool;
	///sensor feedback position retracted reached
	bolRetracted: T_Ctrl_IoBool;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>