<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_CYL_Cur" Id="{849ca438-8dab-4d4a-8ed2-be091111052b}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_CYL_Cur :
STRUCT
	///[ms] time last movement to retract
	udiMoveTimeRetract: UDINT;
	///[ms] time last movement to extend
	udiMoveTimeExtend: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>