<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Ctrl_SIf_CYL_Out" Id="{90bb2602-f323-43d7-b729-cb87f43b059e}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_CYL_Out :
STRUCT
	///switch valve retract
	bolRetract: T_Ctrl_IoBool;
	///switch valve extend
	bolExtend: T_Ctrl_IoBool;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>