<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_Ctrl_SIf_CYL_Par" Id="{fc063fc0-1626-4ac6-b143-90ba22e0b938}">
    <Declaration><![CDATA[TYPE T_Ctrl_SIf_CYL_Par :
STRUCT
	///[ms] until failure to long time for extend
	udiExtendTime_ms: UDINT;
	///[ms] until failure to long time for retract
	udiRetractTime_ms: UDINT;
	///[ms] simulation time for extend or /2 of timeout time?
	udiSimExtendTime_ms: UDINT;
	///[ms] simulation time for retract or /2 of timeout time?
	udiSimRetractTime_ms: UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>